feat: Add automatic detection and disabling of conflicting services (v1.0.1)
This update addresses conflicts with other power management services
that can interfere with PowerVigil's operation.

New Features:
- Added powervigil-disable-conflicts utility to disable conflicting services
- Automatic detection and disabling of conflicting services during configuration
- Enhanced verification script to detect and report conflicts

Services Now Handled:
- power-profiles-daemon: Can override performance settings
- upower: Can trigger power-saving behaviors
- thermald: Thermal management that may throttle performance
- tlp: Advanced power management that conflicts with PowerVigil
- laptop-mode: Power saving for laptops
- auto-cpufreq: Automatic CPU frequency scaling

Changes:
- Configuration script now includes Layer 12b for conflicting services
- Verification script reports conflicts as critical issues
- Better guidance on resolving conflicts
- Updated to version 1.0.1

This ensures PowerVigil maintains complete control over power
management without interference from other services.

--- a/debian/rules
+++ b/debian/rules
@@ -17,6 +17,7 @@ override_dh_auto_install:
 	install -m 755 bin/powervigil-config debian/powervigil/usr/bin/
 	install -m 755 bin/powervigil-verify debian/powervigil/usr/bin/
 	install -m 755 bin/powervigil-watchdog debian/powervigil/usr/bin/
+	install -m 755 bin/powervigil-disable-conflicts debian/powervigil/usr/bin/
 	
 	# Create additional helper scripts
 	install -m 755 debian/powervigil-recover debian/powervigil/usr/bin/
